<resources>
    <string name="app_name">Football Standings</string>
    <string name="skip">Skip</string>
    <string name="selamat_datang">SELAMAT DATANG!</string>
    <string name="desc_onboarding">Aplikasi ini menampilkan \nklasemen sepak bola \ndari berbagai liga</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="ilustrasi_sepak_bola">Ilustrasi Sepak Bola</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="created_by_chairullatif">Created by Chairullatif</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_tim">Logo Tim</string>
    <string name="chariullatif_aji_sadewa">Chariullatif Aji Sadewa</string>
    <string name="emailku">khoirullatif337@gmail.com</string>
    <string name="indonesia_liga_1">Indonesia Liga 1</string>
    <string name="pts">PTS</string>
    <string name="team">Team</string>
    <string name="p">P</string>
    <string name="diff">DIFF</string>
    <string name="leagues">Leagues</string>
    <string name="logo_league">Logo League</string>
</resources>